--- a/mps_shape_completion/docker/Dockerfile
+++ b/mps_shape_completion/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM tensorflow/tensorflow:1.7.0
+FROM tensorflow/tensorflow:1.14.0-gpu
 
 RUN sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list'
 
@@ -6,11 +6,11 @@ RUN apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-key C1CF6
 
 RUN apt-get -yq update && \
     DEBIAN_FRONTEND=noninteractive apt-get -yqq install \
-    ros-kinetic-ros-base \
+    ros-melodic-ros-base \
     gcovr \
     ccache && \
     rm -rf /var/lib/apt/lists/*
 
-RUN echo "source /opt/ros/kinetic/setup.bash" >> ~/.bashrc
+RUN echo "source /opt/ros/melodic/setup.bash" >> ~/.bashrc
 
 RUN mkdir -p ~/catkin_ws/src/
