--- a/mps_shape_completion/CMakeLists.txt
+++ b/mps_shape_completion/CMakeLists.txt
@@ -197,8 +197,8 @@ include_directories(
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
 
-# if (CATKIN_ENABLE_TETING)
+if (CATKIN_ENABLE_TETING)
   # find_package(invalid REQUIRED)
   find_package(rostest REQUIRED)
   add_rostest(tests/demo_test.test)
-# endif()
+endif()
